--- a/public/plugins/asfie/style.css
+++ b/public/plugins/asfie/style.css
@@ -7,7 +7,8 @@
 }
 
 body{
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(75,14,154,1) 35%, rgba(0,212,255,1) 100%);
+    background-image: url("image/background.png");
+    /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(75,14,154,1) 35%, rgba(0,212,255,1) 100%); */
     font-family: 'Poppins', sans-serif;
 
 }
@@ -23,7 +24,7 @@ form{
     width: 100%;
     border: none;
     border-radius: 50px;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(75,14,154,1) 35%, rgba(0,212,255,1) 100%);
+    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(210, 156, 9) 35%, rgb(254, 217, 5) 100%);
     
 }
 
