--- a/public/plugins/asfie/style.css
+++ b/public/plugins/asfie/style.css
@@ -7,25 +7,34 @@
 }
 
 body{
-    background-image: url("image/background.png");
-    /* background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(75,14,154,1) 35%, rgba(0,212,255,1) 100%); */
+    /* background-image: url("image/background.png"); */
+    background: linear-gradient(90deg, rgb(1, 1, 1) 0%, rgb(71, 2, 2) 35%, rgb(124, 26, 11) 100%);
     font-family: 'Poppins', sans-serif;
-
+    background-size: auto;
 }
+
+#particles-js {
+    /* background: skyblue; */
+    height: 100vh;
+  }
+
+
 form{
     border-radius: 20px;
     margin-top: 150px !important;
     width: 24% !important;
     background-color: white !important;
     padding: 50px;
+    position: absolute;
+    left: 40%;
 }
 
 .btn-primary{
     width: 100%;
     border: none;
     border-radius: 50px;
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(210, 156, 9) 35%, rgb(254, 217, 5) 100%);
-    
+    background: linear-gradient(90deg, rgb(133, 98, 1) 0%, rgb(210, 156, 9) 35%, rgb(254, 217, 5) 100%);
+    color: rgb(0, 0, 0);
 }
 
 .form-control{
